fixing layout shift on homepage

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -11693,6 +11693,9 @@ a[href*="http"] .article-header__date {
 .topics-list__topics-wrapper {
   position: relative; }
 
+.topics-list__topics.slick-slider:not(.slick-initialized) {
+  height: 410px; }
+
 .topics-list__topics.slick-slider {
   clear: both;
   padding-top: 40px;
