--- a/docroot/themes/custom/ucsf/scss/views/_view-topic-tag-featured-carousel.scss
+++ b/docroot/themes/custom/ucsf/scss/views/_view-topic-tag-featured-carousel.scss
@@ -85,6 +85,11 @@
 .topics-list__topics-wrapper {
   position: relative;
 }
+
+.topics-list__topics.slick-slider:not(.slick-initialized) {
+  height: 410px;
+}
+
 .topics-list__topics.slick-slider {
   clear: both;
   padding-top: $space-five;
